--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -72,9 +72,9 @@
 <div class=" col-xs-6 col-sm-4 ">
 </div>
 <div class=" col-xs-6 col-sm-4 social">
-  <i class="fa fa-facebook"></i>
-  <i class="fa fa-twitter"></i>
-  <i class="fa fa-instagram"></i>
+  <%= link_to "http://www.facebook.com" do %><i class="fa fa-facebook"></i><% end %>
+  <%= link_to "https://twitter.com" do %><i class="fa fa-twitter"></i><% end %>
+ <%= link_to "https://instagram.com" do %> <i class="fa fa-instagram"></i><% end %>
 
 </div>
 
