fix add your bakery

--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Add your open kitchen</h1>
+<div class="container">
+<h1>Add your bakery </h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', maps_path %>
+</div>
