modify search placeholder

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -42,7 +42,7 @@
 <!-- 
       elastic search -->
         <%= form_tag maps_path, :method => :get do %>
-        <strong><%= text_field_tag :search, params[:search], placeholder: "Search..." %></strong>
+        <strong><%= text_field_tag :search, params[:search], placeholder: "Search by City, Zipcode or State" %></strong>
         <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
         <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
  <!--    <div id="press"> <%#= submit_tag " Search " , :name => nil %></div> -->
